Add babel for ES6 syntax and related dependencies.

--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "dependencies": {
     "apollo-server": "2.12",
     "nodemon": "2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/node": "^7.13.10",
+    "@babel/preset-env": "^7.13.10"
   }
 }
