--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,63 +1,78 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
+  "env": {
+    "es2021": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended"
+  ],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-        "eslint:recommended"
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": [
+    "json-format"
+  ],
+  "ignorePatterns": [
+    "node_modules"
+  ],
+  "rules": {
+    "array-bracket-spacing": 1,
+    "arrow-body-style": [
+      1,
+      "as-needed"
     ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
+    "arrow-parens": [
+      1,
+      "as-needed"
     ],
-    "rules": {
-		"array-bracket-spacing": 1,
-		"arrow-body-style": [1, "as-needed"],
-		"arrow-parens": [1, "as-needed"],
-		"arrow-spacing": 1,
-		"brace-style": 1,
-		"block-spacing": 1,
-		"capitalized-comments": 1,
-		"comma-style": 1,
-		"curly": 1,
-		"comma-dangle": 1,
-		"comma-spacing": 1,
-		"computed-property-spacing": 1,
-		"eol-last": 1,
-		"eqeqeq": 1,
-		"func-call-spacing": 1,
-		"func-style": 1,
-        "indent": [
-			"error",
-            "tab"
-        ],
-		"jsx-quotes": 1,
-		"key-spacing": 1,
-		"keyword-spacing": 1,
-        "linebreak-style": [
-			"error",
-            "unix"
-        ],
-		"lines-around-comment": 1,
-		"no-lone-blocks": 1,
-		"no-unused-vars": 1,
-		"object-curly-spacing": ["warn", "always"],
-		"prefer-const": 1,
-		"prefer-template": 1,
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-		],
-		"space-before-function-paren": [1, "always"]
-    }
+    "arrow-spacing": 1,
+    "brace-style": 1,
+    "block-spacing": 1,
+    "capitalized-comments": 1,
+    "comma-style": 1,
+    "curly": 1,
+    "comma-dangle": 1,
+    "comma-spacing": 1,
+    "computed-property-spacing": 1,
+    "eol-last": 1,
+    "eqeqeq": 1,
+    "func-call-spacing": 1,
+    "func-style": 1,
+    "indent": [
+      "error",
+      "tab"
+    ],
+    "jsx-quotes": 1,
+    "key-spacing": 1,
+    "keyword-spacing": 1,
+    "linebreak-style": [
+      "error",
+      "unix"
+    ],
+    "lines-around-comment": 1,
+    "no-lone-blocks": 1,
+    "no-unused-vars": 1,
+    "object-curly-spacing": [
+      "warn",
+      "always"
+    ],
+    "prefer-const": 1,
+    "prefer-template": 1,
+    "quotes": [
+      "error",
+      "double"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "space-before-function-paren": [
+      1,
+      "always"
+    ]
+  }
 }
