--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "LearningGraphQLApollo",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/ElliotRedhead/LearningGraphQLApollo.git",
-  "author": "ElliotRedhead <elliot.redhead@gmail.com>",
   "license": "MIT",
+  "author": "ElliotRedhead <elliot.redhead@gmail.com>",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon ./app/index.js",
+    "lint": "eslint '**/*.{js,json,ts,jsx,tsx}' --fix"
+  },
   "dependencies": {
     "apollo-server": "2.12",
     "nodemon": "2.0"
@@ -13,6 +18,7 @@
     "@babel/core": "^7.13.10",
     "@babel/node": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
-    "eslint": "^7.22.0"
+    "eslint": "^7.22.0",
+    "eslint-plugin-json-format": "^2.0.1"
   }
 }
