--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint": "eslint '**/*.{js,json,ts,jsx,tsx}' --fix"
 	},
 	"dependencies": {
+		"apollo-datasource": "0.7.0",
 		"apollo-server": "2.12",
 		"graphql": "^15.5.0",
 		"nodemon": "2.0"
