--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"apollo-datasource": "0.7.0",
 		"apollo-server": "2.12",
 		"graphql": "^15.5.0",
+		"lodash": "4.17",
 		"nodemon": "2.0"
 	},
 	"devDependencies": {
