--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"apollo-datasource": "0.7.0",
+		"apollo-datasource-rest": "0.9.3",
 		"apollo-server": "2.12",
 		"graphql": "^15.5.0",
 		"lodash": "4.17",
