--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
 	"version": "1.0.0",
 	"repository": "https://github.com/ElliotRedhead/LearningGraphQLApollo.git",
 	"license": "MIT",
-	"author": "ElliotRedhead <elliot.redhead@gmail.com>",
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon --experimental-json-modules ./server.js",
+		"start": "nodemon --experimental-json-modules ./index.js",
 		"lint": "eslint '**/*.{js,json,ts,jsx,tsx}' --fix"
 	},
 	"dependencies": {
